--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <img src="img3.jpg" alt="Foto 3" onclick="showMessage('Siempre serás la mejor parte de mi vida ❤️'); playMusic('audio3')">
   <audio id="audio3">
-    <source src="Cold1.mp3" type="audio/mp3">
+    <source src="cold1.mp3" type="audio/mp3">
   </audio>
 </div>
 
