--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </script>
 
 <div class="boton-descarga">
-        <a target = "_blank" download="HBD" href="https://drive.google.com/file/d/1-70KtzmNmnIIW79zVOhZpF39P5bTFJHt/view?usp=drive_link">
+        <a target = "_self" download="HBD" href="https://drive.google.com/file/d/1-70KtzmNmnIIW79zVOhZpF39P5bTFJHt/view?usp=drive_link">
             <button>Descargar Archivo</button>
         </a>
     </div>
