--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Background moon</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
@@ -118,7 +119,7 @@
 </script>
 
 <div class="boton-descarga">
-        <a target = "_self" download="HBD" href="https://drive.google.com/file/d/1a12zF72t-xqKFkZ9BDSIcNruj2sklTbO/view?usp=drive_link">
+        <a target="_blank" href="HBD.mp4" download="HBD.mp4">
             <button>Descargar Archivo</button>
         </a>
     </div>
