--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </script>
 
 <div class="boton-descarga">
-        <a target="_blank" href="HBD.mp4" download="HBD.mp4">
+        <a target="_self" href="HBD.mp4" download="HBD.mp4">
             <button>Descargar Archivo</button>
         </a>
     </div>
