--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </script>
 
 <div class="boton-descarga">
-        <a target="_self" href="https://drive.google.com/file/d/1a12zF72t-xqKFkZ9BDSIcNruj2sklTbO/view?usp=sharing" download="HBD">
+        <a target="_self" download="HBD" href="https://drive.google.com/file/d/1a12zF72t-xqKFkZ9BDSIcNruj2sklTbO/view?usp=sharing">
             <button>Descargar Archivo</button>
         </a>
     </div>
