--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </script>
 
 <div class="boton-descarga">
-        <a target="_blank" download="HBD" href="https://drive.google.com/file/d/1a12zF72t-xqKFkZ9BDSIcNruj2sklTbO/view?usp=sharing">
+        <a target="_blank" download="HBD" href="https://drive.google.com/file/d/1-70KtzmNmnIIW79zVOhZpF39P5bTFJHt/view?usp=drive_link">
             <button>Descargar Archivo</button>
         </a>
     </div>
